First Website added interests section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
                 </div>
             
                 <div class="content">
-                  
+                    <div id="interests">
+                        <h3>Interests</h3>
+                        <ul>
+                            <li>swimming</li>
+                            <li>reading</li>
+                            <li>fishing</li>
+                        </ul>
+                    </div>
                 </div>
             </main>
         </div>
